Infrastructure: Build and test GraalVM 22.2.0, Java 17 and NetLogo 6.3